Fixed separator image CSS so they shrink to fit on small screens. .table-of-contents text-alignment is centered. Using the dark red feather claw image for a Darkening greater separator. I don't know if that'll stay. I'm not sure about the Darkening lesser separator either. Removed padding from around separator images in both Darkening and Last Redoubt CSS schemes.

--- a/css/darkening.scss
+++ b/css/darkening.scss
@@ -206,20 +206,27 @@ section.table-of-contents {
     line-height: 1.5;
 }
 
+.table-of-contents p {
+    text-align: center;
+}
+
 img.greater-separator {
     max-width: $native-separator-width;
-    padding: 1rem;
+    width: 100%;
+    height: auto;
 }
 
 img.greater-separator-reversed {
     max-width: $native-separator-width;
-    padding: 1rem;
+    width: 100%;
+    height: auto;
     transform: scaleX(-1);
 }
 
 img.lesser-separator {
     max-width: $native-separator-width;
-    padding: 1.25rem;
+    width: 100%;
+    height: auto;
 }
 
 /* *********************************************
